tests/baselines/reference/parserArrowFunctionExpression16(strict=true).errors.txt
fileJs.js(1,17): error TS7006: Parameter 'param' implicitly has an 'any' type.
fileJs.js(1,25): error TS8010: Type annotations can only be used in TypeScript files.
fileTs.ts(1,17): error TS7006: Parameter 'param' implicitly has an 'any' type.


==== fileJs.js (2 errors) ====
    true ? false ? (param): string => param : null : null // Not legal JS; "Unexpected token ':'" at last colon
                    ~~~~~
!!! error TS7006: Parameter 'param' implicitly has an 'any' type.
                            ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    
==== fileTs.ts (1 errors) ====
    true ? false ? (param): string => param : null : null
                    ~~~~~
!!! error TS7006: Parameter 'param' implicitly has an 'any' type.
    